# nav2

./: README.md  frames_2025-05-19_20.11.20.gv  frames_2025-05-19_20.12.39.gv  setup.cfg  setup.py
config/: diff_controllers.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/familiapachuquena_nav2_puzzlebot/share/familiapachuquena_nav2_puzzlebot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/familiapachuquena_nav2_puzzlebot/share/familiapachuquena_nav2_puzzlebot/launch/: lafam_launch.launch.py  nav2_launch.launch.py
install/familiapachuquena_nav2_puzzlebot/share/familiapachuquena_nav2_puzzlebot/param/: puzzlebot.yaml
install/familiapachuquena_nav2_puzzlebot/share/familiapachuquena_nav2_puzzlebot/urdf/mcr2_robots/: puzzlebot_jetson_lidar_ed.xacro
launch/: lafam_launch.launch.py  mapping.launch.py  navigation.launch.py
log/: latest_build
models/hexagonal_world/: model.sdf
param/: puzzlebot.yaml  slam_toolbox_config.yaml
rviz/: nav2_mapping.rviz  puzzlebot_nav.rviz
urdf/mcr2_control/: gazebo_control.xacro
urdf/mcr2_mechanical/: puzzlebot_jetson_lidar_base.urdf.xacro
urdf/mcr2_robots/: puzzlebot_jetson_lidar_ed.xacro
urdf/mcr2_robots/jetson_lidar_ed/: parameters_jetson_lidar_ed.xacro
urdf/mcr2_sensors/: laser_camera_bracket.xacro  lidar.xacro
worlds/: puzzlebot.world
