<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>familiapachuquena_nav2_puzzlebot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="robertog@todo.todo">robertog</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencias de compilación (build_depend) -->
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Dependencias de ejecución (exec_depend) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
